Ticket: #ENT-574 SubTicket: # Component:Selected Data Source should display with ellipsis when the Name is too long Changes: 1.Bug fix.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/navigation-menu.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/navigation-menu.less
@@ -606,7 +606,7 @@
 					position: absolute;
 					top: 0;
 					padding-top: 54px;
-					min-width: 310px;
+					width: 310px;
 					z-index: 10;
 					background-color: @HoverBackgroundColor;
 					overflow: hidden;
@@ -625,6 +625,8 @@
 							line-height: 42px;
 							font-size: 16px;
 							white-space: nowrap;
+							overflow: hidden;
+							text-overflow: ellipsis;
 
 							&.active {
 								background-color: @systemColor !important;
